# path_tracer

./: CMakeLists.txt  README.md
include/: camera.hpp  intersect_visitor.hpp  material.hpp  scene.hpp
include/image_buffers/: hdr_buffer.hpp
include/integrators/: ray_caster.hpp
include/lenses/: pinhole.hpp
include/shapes/: sphere.hpp
include/utils/: math.hpp
src/: CMakeLists.txt  camera.hpp  hit_info.hpp  intersect_visitor.hpp  main.cpp  material.hpp  ray.hpp  scene.cpp  scene.hpp
src/image_buffers/: CMakeLists.txt  hdr_buffer.cpp  hdr_buffer.hpp  rgb_buffer.hpp
src/integrators/: integrator.hpp  path_tracer.hpp  ray_caster.hpp
src/lenses/: pinhole.hpp
src/post_processes/: clamp.hpp  clamp_to_rgb.hpp  gamma_correction.hpp  modified_reinhard.hpp
src/samplers/: random_sampler.hpp
src/shapes/: box.hpp  plane.hpp
src/utils/: CMakeLists.txt  math.cpp  math.hpp  shape_visitor.hpp
